agregar pdf a la compra

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@mercadopago/sdk-js": "^0.0.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.7.0",
     "mercadopago": "^2.0.1",
+    "pdfmake": "^0.2.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
