--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "@mercadopago/sdk-js": "^0.0.3",
+    "firebase": "^10.5.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
     "rxjs": "~7.8.0",
