--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,9 @@
 {
-  "hosting": {
-    "public": "dist/frontend",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  }
+  "hosting": [
+    {
+      "target": "frontend",
+      "source": ".",
+      "frameworksBackend": {}
+    }
+  ]
 }
