--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.7",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
-    "firebase": "^10.5.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.7.0",
     "rxjs": "~7.8.0",
